# podping-schemas-python

./: .gitignore  .gitmodules  copy-schema-files.sh  generate_python_json_class.py  pre-build.sh  pyproject.toml
.github/workflows/: build-publish.yml
examples/: json_import.py
templates/: python_json_template.j2
